load("//build_defs:rules.bzl", "donner_cc_library")

donner_cc_library(
    name = "svg_document_handle",
    hdrs = [
        "DocumentState.h",
        "SVGDocumentHandle.h",
    ],
    visibility = [
        "//donner/svg:__subpackages__",
    ],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "svg_core",
    srcs = [
        "DonnerController.cc",
        "SVGAElement.cc",
        "SVGAnimateElement.cc",
        "SVGAnimateTransformElement.cc",
        "SVGCircleElement.cc",
        "SVGClipPathElement.cc",
        "SVGDefsElement.cc",
        "SVGDocument.cc",
        "SVGElement.cc",
        "SVGEllipseElement.cc",
        "SVGFEBlendElement.cc",
        "SVGFEColorMatrixElement.cc",
        "SVGFEComponentTransferElement.cc",
        "SVGFECompositeElement.cc",
        "SVGFEConvolveMatrixElement.cc",
        "SVGFEDiffuseLightingElement.cc",
        "SVGFEDisplacementMapElement.cc",
        "SVGFEDistantLightElement.cc",
        "SVGFEDropShadowElement.cc",
        "SVGFEFloodElement.cc",
        "SVGFEFuncAElement.cc",
        "SVGFEFuncBElement.cc",
        "SVGFEFuncGElement.cc",
        "SVGFEFuncRElement.cc",
        "SVGFEGaussianBlurElement.cc",
        "SVGFEImageElement.cc",
        "SVGFEMergeElement.cc",
        "SVGFEMergeNodeElement.cc",
        "SVGFEMorphologyElement.cc",
        "SVGFEOffsetElement.cc",
        "SVGFEPointLightElement.cc",
        "SVGFESpecularLightingElement.cc",
        "SVGFESpotLightElement.cc",
        "SVGFETileElement.cc",
        "SVGFETurbulenceElement.cc",
        "SVGFilterElement.cc",
        "SVGFilterPrimitiveStandardAttributes.cc",
        "SVGGElement.cc",
        "SVGGeometryElement.cc",
        "SVGGradientElement.cc",
        "SVGGraphicsElement.cc",
        "SVGImageElement.cc",
        "SVGLineElement.cc",
        "SVGLinearGradientElement.cc",
        "SVGMarkerElement.cc",
        "SVGMaskElement.cc",
        "SVGPathElement.cc",
        "SVGPatternElement.cc",
        "SVGPolygonElement.cc",
        "SVGPolylineElement.cc",
        "SVGQuerySelector.cc",
        "SVGRadialGradientElement.cc",
        "SVGRectElement.cc",
        "SVGSVGElement.cc",
        "SVGSetElement.cc",
        "SVGStopElement.cc",
        "SVGStyleElement.cc",
        "SVGStyleQuery.cc",
        "SVGSwitchElement.cc",
        "SVGSymbolElement.cc",
        "SVGTSpanElement.cc",
        "SVGTextContentElement.cc",
        "SVGTextElement.cc",
        "SVGTextPathElement.cc",
        "SVGTextPositioningElement.cc",
        "SVGUnknownElement.cc",
        "SVGUseElement.cc",
    ],
    hdrs = [
        "AllSVGElements.h",
        "DocumentState.h",
        "DonnerController.h",
        "SVGAElement.h",
        "SVGAnimateElement.h",
        "SVGAnimateTransformElement.h",
        "SVGCircleElement.h",
        "SVGClipPathElement.h",
        "SVGDefsElement.h",
        "SVGDocument.h",
        "SVGDocumentHandle.h",
        "SVGElement.h",
        "SVGElementNames.h",
        "SVGEllipseElement.h",
        "SVGFEBlendElement.h",
        "SVGFEColorMatrixElement.h",
        "SVGFEComponentTransferElement.h",
        "SVGFECompositeElement.h",
        "SVGFEConvolveMatrixElement.h",
        "SVGFEDiffuseLightingElement.h",
        "SVGFEDisplacementMapElement.h",
        "SVGFEDistantLightElement.h",
        "SVGFEDropShadowElement.h",
        "SVGFEFloodElement.h",
        "SVGFEFuncAElement.h",
        "SVGFEFuncBElement.h",
        "SVGFEFuncGElement.h",
        "SVGFEFuncRElement.h",
        "SVGFEGaussianBlurElement.h",
        "SVGFEImageElement.h",
        "SVGFEMergeElement.h",
        "SVGFEMergeNodeElement.h",
        "SVGFEMorphologyElement.h",
        "SVGFEOffsetElement.h",
        "SVGFEPointLightElement.h",
        "SVGFESpecularLightingElement.h",
        "SVGFESpotLightElement.h",
        "SVGFETileElement.h",
        "SVGFETurbulenceElement.h",
        "SVGFilterElement.h",
        "SVGFilterPrimitiveStandardAttributes.h",
        "SVGGElement.h",
        "SVGGeometryElement.h",
        "SVGGradientElement.h",
        "SVGGraphicsElement.h",
        "SVGImageElement.h",
        "SVGLineElement.h",
        "SVGLinearGradientElement.h",
        "SVGMarkerElement.h",
        "SVGMaskElement.h",
        "SVGPathElement.h",
        "SVGPatternElement.h",
        "SVGPolygonElement.h",
        "SVGPolylineElement.h",
        "SVGQuerySelector.h",
        "SVGRadialGradientElement.h",
        "SVGRectElement.h",
        "SVGSVGElement.h",
        "SVGSetElement.h",
        "SVGStopElement.h",
        "SVGStyleElement.h",
        "SVGStyleQuery.h",
        "SVGSwitchElement.h",
        "SVGSymbolElement.h",
        "SVGTSpanElement.h",
        "SVGTextContentElement.h",
        "SVGTextElement.h",
        "SVGTextPathElement.h",
        "SVGTextPositioningElement.h",
        "SVGUnknownElement.h",
        "SVGUseElement.h",
    ],
    visibility = [
        "//:__pkg__",
        "//donner/svg/parser:__pkg__",
        "//donner/svg/properties/tests:__pkg__",
        "//donner/svg/renderer:__subpackages__",
        "//donner/svg/tests:__pkg__",
    ],
    deps = [
        ":svg_document_handle",
        "//donner/svg/components",
        "//donner/svg/components/animation:components",
        "//donner/svg/core",
        "//donner/svg/parser:parser_core",
        "//donner/svg/properties",
        "//donner/svg/renderer:rendering_context",
        "//donner/svg/resources:sandboxed_file_resource_loader",
        # SVGTextContentElement.cc unconditionally uses TextEngine for
        # getComputedTextLength/getSubStringLength, so this dep is not
        # conditional on text_enabled.
        "//donner/svg/text:text_engine",
    ],
)

donner_cc_library(
    name = "element_type",
    srcs = [
        "ElementType.cc",
    ],
    hdrs = [
        "ElementType.h",
    ],
    visibility = [
        "//donner/svg:__subpackages__",
    ],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "svg",
    hdrs = [
        "SVG.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":svg_core",
        "//donner/svg/parser",
    ],
)
