load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "svg_viewer",
    srcs = ["svg_viewer.cc"],
    target_compatible_with = select({
        "//build_defs:gui_supported": [
            "@platforms//os:macos",
        ],
        "//conditions:default": [
            "@platforms//:incompatible",
        ],
    }),
    deps = [
        "@donner",
        "@donner//donner/base:failure_signal_handler",
        "@donner//third_party/glad",
        "@glfw",
        "@imgui",
    ],
)
