"""Test utilities for golden image comparison and cross-validation."""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//tests:__subpackages__"])

cc_library(
    name = "png_decoder",
    srcs = ["PngDecoder.cpp"],
    hdrs = ["PngDecoder.h"],
    copts = ["-std=c++20"],
    includes = ["."],
    deps = ["@zlib"],
)

cc_library(
    name = "golden_test_helper",
    hdrs = ["GoldenTestHelper.h"],
    copts = ["-std=c++20"],
    includes = ["."],
    deps = [
        ":png_decoder",
        "//src:tiny_skia_lib",
        "@googletest//:gtest",
        "@pixelmatch-cpp17",
    ],
)

cc_library(
    name = "rust_reference",
    hdrs = ["RustReference.h"],
    copts = ["-std=c++20"],
    includes = ["."],
    deps = [
        "//src:tiny_skia_lib",
        "//tests/rust_ffi:tiny_skia_ffi",
    ],
)

cc_library(
    name = "cross_validator",
    hdrs = ["CrossValidator.h"],
    copts = ["-std=c++20"],
    includes = ["."],
    deps = [
        ":rust_reference",
        "//src:tiny_skia_lib",
        "@googletest//:gtest",
        "@pixelmatch-cpp17",
    ],
)
