load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "gen_cmakelists_lib",
    srcs = ["gen_cmakelists.py"],
    data = ["//:MODULE.bazel"],
    visibility = ["//visibility:private"],
)

py_test(
    name = "gen_cmakelists_test",
    srcs = ["gen_cmakelists_test.py"],
    data = ["//:MODULE.bazel"],
    deps = [":gen_cmakelists_lib"],
    # Needs the workspace root for MODULE.bazel discovery
    env = {"BAZEL_WORKSPACE_TEST": "1"},
)
