# Portable Donner SVG2 test suite: schemas, manifest validation, and the
# compliance-baseline seed. See docs/design_docs/0057-donner_svg2_test_suite.md.

filegroup(
    name = "schemas",
    srcs = glob(["schemas/*.json"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "spec_seed_data",
    srcs = glob(["spec/*.json"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "manifest_validation",
    srcs = [
        "jsonschema_lite.py",
        "manifest_validation.py",
        "path_safety.py",
    ],
    data = [":schemas"],
    main = "manifest_validation.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "manifest_validation_tests",
    srcs = [
        "jsonschema_lite.py",
        "manifest_validation.py",
        "manifest_validation_tests.py",
        "path_safety.py",
    ],
    data = [":schemas"],
)

py_test(
    name = "security_tests",
    srcs = [
        "jsonschema_lite.py",
        "manifest_validation.py",
        "path_safety.py",
        "security_tests.py",
    ],
    data = [":schemas"],
)

py_binary(
    name = "spec_seed",
    srcs = [
        "jsonschema_lite.py",
        "spec_seed.py",
    ],
    data = [
        ":schemas",
        ":spec_seed_data",
    ],
    main = "spec_seed.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "spec_seed_tests",
    srcs = [
        "jsonschema_lite.py",
        "spec_seed.py",
        "spec_seed_tests.py",
    ],
    data = [
        ":schemas",
        ":spec_seed_data",
    ],
)

# Milestone 2: reference runner and adapter protocol.

py_binary(
    name = "runner",
    srcs = [
        "adapter_protocol.py",
        "path_safety.py",
        "png_image.py",
        "runner.py",
    ],
    main = "runner.py",
    visibility = ["//visibility:public"],
)

# Standalone stdlib-only executable adapter used as a test fixture. It depends
# on nothing else in the suite, mirroring a real external adapter.
py_binary(
    name = "reference_adapter",
    srcs = ["reference_adapter.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "runner_tests",
    srcs = [
        "adapter_protocol.py",
        "jsonschema_lite.py",
        "manifest_validation.py",
        "path_safety.py",
        "png_image.py",
        "runner.py",
        "runner_tests.py",
        "suite_test_support.py",
    ],
    data = [
        "reference_adapter.py",
        ":schemas",
    ],
)

py_test(
    name = "adapter_contract_tests",
    srcs = [
        "adapter_contract_tests.py",
        "adapter_protocol.py",
        "path_safety.py",
        "png_image.py",
        "runner.py",
        "suite_test_support.py",
    ],
    data = ["reference_adapter.py"],
)

# Milestone 3: package the resvg base layer. Generates a corpus-v1 manifest
# from the pinned, unmodified upstream tree at //third_party/resvg-test-suite.

py_binary(
    name = "resvg_base_manifest",
    srcs = ["resvg_base_manifest.py"],
    main = "resvg_base_manifest.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "resvg_base_manifest_tests",
    srcs = [
        "jsonschema_lite.py",
        "manifest_validation.py",
        "path_safety.py",
        "resvg_base_manifest.py",
        "resvg_base_manifest_tests.py",
    ],
    data = [
        ":schemas",
        "//third_party/resvg-test-suite:LICENSE",
        "//third_party/resvg-test-suite:tests",
    ],
    deps = ["@rules_python//python/runfiles"],
)
