"""Donner SVG: Embeddable browser-grade SVG2 engine for your application.

A C++20 SVG rendering library providing full SVG DOM access with complete rendering
support including text, filters, and animation."""

module(name = "donner_tools_python", version = "0.0.1")

bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
    dev_dependency = True,
)

pip.parse(
    hub_name = "py_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "py_deps")
