load("//build_defs:rules.bzl", "donner_cc_fuzzer", "donner_cc_library", "donner_cc_test")

exports_files(
    [
        "testdata/valid-001.woff",
        "testdata/valid-001.woff2",
    ],
    visibility = ["//donner:__subpackages__"],
)
load("//build_defs:visibility.bzl", "donner_internal_visibility")

donner_cc_library(
    name = "fonts",
    srcs = [
        "WoffParser.cc",
    ],
    hdrs = [
        "WoffFont.h",
        "WoffParser.h",
    ],
    visibility = donner_internal_visibility(),
    deps = [
        "//donner/base",
        "//donner/base/encoding:decompress",
    ],
)

donner_cc_test(
    name = "fonts_tests",
    srcs = ["tests/WoffParser_tests.cc"],
    data = ["testdata/valid-001.woff"],
    deps = [
        ":fonts",
        "//donner/base:base_test_utils",
        "@com_google_gtest//:gtest_main",
    ],
)

# woff2_parser is only used from the text-full path
# (donner/svg/resources/BUILD.bazel selects it under :text_full_enabled).
# Gate the target itself so its @woff2 dep is only resolved when text_full is
# enabled — this is a prerequisite for BCR consumers, where @woff2 is not
# declared (it lives in the dev-only non_bcr_deps module extension).
donner_cc_library(
    name = "woff2_parser",
    srcs = ["Woff2Parser.cc"],
    hdrs = ["Woff2Parser.h"],
    target_compatible_with = select({
        "//donner/svg/renderer:text_full_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = donner_internal_visibility(),
    deps = [
        "//donner/base",
        "@woff2//:woff2_decode",
    ],
)

donner_cc_test(
    name = "woff2_parser_tests",
    srcs = ["tests/Woff2Parser_tests.cc"],
    data = ["testdata/valid-001.woff2"],
    target_compatible_with = select({
        "//donner/svg/renderer:text_full_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":woff2_parser",
        "//donner/base:base_test_utils",
        "@com_google_gtest//:gtest_main",
        "@stb//:truetype",
    ],
)

donner_cc_fuzzer(
    name = "woff_parser_fuzzer",
    srcs = ["tests/WoffParser_fuzzer.cc"],
    corpus = "testdata",
    deps = [
        ":fonts",
    ],
)
